--- a/index.html
+++ b/index.html
@@ -5,14 +5,37 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Osiris - Terpias Holisticas</title>
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="./styles/main.css">
+    <link rel="stylesheet" href="./styles/normalize.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
         rel="stylesheet">
-</head>
 
+    <!-- --------------------------------- METADATAS PARA SEO -------------------------------->
+    <!-- Primary Meta Tags -->
+<title>Osiris Terapias Holísticas – Bienestar Físico y Mental con Ariadna Jara</title>
+<meta name="title" content="Osiris Terapias Holísticas – Bienestar Físico y Mental con Ariadna Jara" />
+<meta name="description" content="Descubre Osiris Terapias Holísticas, creado por Ariadna Jara, terapeuta con más de 12 años de experiencia. Con profesionalismo y dedicación, te ayuda a mejorar tu bienestar físico y mental." />
+
+<!-- Open Graph / Facebook -->
+<meta property="og:type" content="website" />
+<meta property="og:url" content="#" /> <!-- Acá hay que coordinar dominio -->
+<meta property="og:title" content="Osiris Terapias Holísticas – Bienestar Físico y Mental con Ariadna Jara" />
+<meta property="og:description" content="Descubre Osiris Terapias Holísticas, creado por Ariadna Jara, terapeuta con más de 12 años de experiencia. Con profesionalismo y dedicación, te ayuda a mejorar tu bienestar físico y mental." />
+<meta property="og:image" content="https://metatags.io/images/meta-tags.png" />
+
+<!-- Tic-toc -->
+<meta property="twitter:card" content="summary_large_image" />
+<meta property="twitter:url" content="https://metatags.io/" />
+<meta property="twitter:title" content="Osiris Terapias Holísticas – Bienestar Físico y Mental con Ariadna Jara" />
+<meta property="twitter:description" content="Descubre Osiris Terapias Holísticas, creado por Ariadna Jara, terapeuta con más de 12 años de experiencia. Con profesionalismo y dedicación, te ayuda a mejorar tu bienestar físico y mental." />
+<meta property="twitter:image" content="https://metatags.io/images/meta-tags.png" />
+
+<!-- Meta Tags Generated with https://metatags.io -->
+
+</head>
 
 <body>
 
@@ -43,7 +66,7 @@
         <section class="about-me" id="sobre_mi">
             <div class="about-container">
                 <div class="about-image">
-                    <img src="./img/Perfil_Ari.png" alt="Mi Foto">
+                    <img src="./img/Ariadna/A3.jpg" alt="Mi Foto">
                 </div>
                 <div class="about-text">
                     <h2>Hola!, soy Ariadna Jara</h2>
@@ -75,7 +98,7 @@
 
         <!-- SECCION FIRST -->
         <section class="contenedor" id="servicio">
-            <h2 class="subtitulo">Comenzá hoy </h2>
+            <h2 class="subtitulo comenza_hoy">Comenzá hoy </h2>
             <div class="contenedor-servicio">
                 <img src="./img/meditation-56.svg" alt="">
                 <div class="checklist-servicio">
@@ -102,8 +125,9 @@
 
         <section class="gallery" id="portfolio">
             <div class="contenedor">
-                <h2 class="subtitulo">Terapias</h2>
+                <h2 class="subtitulo terapias">Terapias</h2>
                 <div class="contenedor-galeria">
+
                     <div class="image-container">
                         <h3 class="title-galery">Modalidad virtual</h3>
                         <img src="./img/modalidad_virtual1.jpg" alt="carta_natal" class="img-galeria">
@@ -147,6 +171,17 @@
                             <div class="item" data-info="La carta natal o mapa natal nos enseña cómo estaba el cosmos en el momento exacto de nuestro nacimiento Nos invita a conocer nuestras potencialidades, dones, talentos y dificultades. <br/> Nos lleva a descubrir quiénes somos y a reconocernos como los seres grandiosos que somos. <br/> La carta natal nos brinda información relevante   para conocer las energías y ritmos que conforman nuestra personalidad, aquello que nos hace ser auténticos." data-bg="bg4.jpg">Un viaje a conocerte</div>
                         </div>
                     </div>
+                    
+                    <div class="image-container">
+                        <h3 class="title-galery">Other</h3>
+                        <img src="./img/Aceites2.jpeg" alt="Imagen 2" class="img-galeria">
+                        <div class="items-container">
+                            <div class="item" data-info="Descripción del Item B" data-bg="bg5.jpg">Barras de access</div>
+                            <div class="item" data-info="Descripción del Item C" data-bg="bg6.jpg">Procesos de cuerpo</div>
+                            <div class="item" data-info="Descripción del Item D" data-bg="bg6.jpg">Reflexología</div>
+                            <div class="item" data-info="Descripción del Item E" data-bg="bg6.jpg">Masaje metamórfico</div>
+                        </div>
+                    </div>
                     <!-- Agregar más imágenes con el mismo formato si es necesario -->
                 </div>
             </div>
@@ -160,18 +195,18 @@
         </div>
 
         <!-- SECTION FOUR -->
-        <section class="contenedor" id="galeria">
-            <h2 class="subtitulo">Promos</h2>
+        <section class="contenedor gratuitos_fondo" id="galeria">
+            <h2 class="subtitulo gratuitos">Recursos gratuitos</h2>
             <section class="experts">
-                <div class="cont-expert">
+                <div class="cont-expert tips">
                     <img src="./img/day-dreaming1.svg" alt="">
-                    <h3 class="n-expert">Bienestar mental</h3>
+                    <h3 class="n-expert">Tips para un bienestar mental</h3>
                 </div>
-                <div class="cont-expert">
+                <div class="cont-expert red_de_apoyo">
                     <img src="./img/meditation1.svg" alt="">
-                    <h3 class="n-expert">Home</h3>
+                    <h3 class="n-expert">Creando tu red de apoyo</h3>
                 </div>
-                <div class="cont-expert">
+                <div class="cont-expert tecnicas_de_respiracion">
                     <img src="./img/meditation2.svg" alt="">
                     <h3 class="n-expert">Meditación</h3>
                 </div>
